--- a/EntryNow.WebApp/Pages/Entries/Add.razor
+++ b/EntryNow.WebApp/Pages/Entries/Add.razor
@@ -174,11 +174,11 @@
                 }
                 @if (pageLoading)
                 {
-                    <tr>
-                        <td colspan="12" class="text-center align-center">
-                            <span class="spinner-border spinner-border-lg align-center"></span>
-                        </td>
-                    </tr>
+                      <tr>
+                          <td colspan="12" class="text-center">
+                              <span class="spinner-border spinner-border-lg align-center"></span>
+                          </td>
+                      </tr>
                 }
               </EditForm>
           </div>
