--- a/EntryNow.WebApp/Pages/Entries/Index.razor
+++ b/EntryNow.WebApp/Pages/Entries/Index.razor
@@ -118,10 +118,44 @@
                         @if(_page != 1)
                         {
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>&laquo;</a></li>
+                            <li class="page-item"><a class="page-link" @onclick="GetDataOnPreviousPage" href="" @onclick:preventDefault>...</a></li>
                         }
                         @if (totalPages > 0)
                         {
-                            @for (int i = 1; i <= totalPages; i++)
+                            @for (int i = _page - 1; i < _page + 2 ; i++)
+                            {
+                                int buttonNumber = i;
+                                @if (buttonNumber < 1 || buttonNumber > totalPages)
+                                {
+                                   @* buttonNumber = 1;
+                                    @if (buttonNumber == _page)
+                                    {
+                                        <li class="page-item active"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@buttonNumber</a></li>
+                                    }
+                                    else
+                                    {
+                                        <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@buttonNumber</a></li>
+                                    }*@
+                                }
+                                else
+                                {
+                                    @if (buttonNumber == _page)
+                                    {
+                                        @*@if (i != 0)*@
+                                        @*{*@
+                                            <li class="page-item active"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                        @*}*@
+                                    }
+                                    else
+                                    {
+                                        @*@if (i != 0)*@
+                                        @*{*@
+                                            <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
+                                        @*}*@
+                                    }
+                                }
+                            }
+                            @*@for (int i = 1; i <= totalPages; i++)
                             {
                                 int buttonNumber = i;
                                 @if (buttonNumber == _page)
@@ -132,7 +166,7 @@
                                 {
                                     <li class="page-item"><a class="page-link" @onclick="@(() => GetDataByPageNumber(buttonNumber))" href="" @onclick:preventDefault>@i</a></li>
                                 }
-                            }
+                            }*@
                         }
                         @if(_page == totalPages)
                         {
@@ -140,6 +174,7 @@
                         }
                         @if(_page != totalPages)
                         {
+                            <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>...</a></li>
                             <li class="page-item"><a class="page-link" @onclick="GetDataOnNextPage" href="" @onclick:preventDefault>&raquo;</a></li>
                         }
                   </ul>
